[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llnl-clippy"
version = "0.1.1"
authors = [
  { name="Roger Pearce"}, { name="Seth Bromberger"}
]
description="A Python interface to HPC resources"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Programming Language :: Python :: 3",
        "Programming Language :: C++",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/LLNL/clippy"
Issues = "https://github.com/LLNL/clippy/issues"
