[build-system]
requires = ["setuptools >= 68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llnl-clippy"
version = "0.3.1"
authors = [
  { name="Roger Pearce"}, { name="Seth Bromberger"}
]
description="A Python interface to HPC resources"
readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]

requires-python = ">=3.10"

classifiers = [
        "Development Status :: 3 - Alpha",
        "Programming Language :: Python :: 3",
        "Programming Language :: C++",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements-dev.txt"] }}


[project.urls]
Homepage = "https://github.com/LLNL/clippy"
Issues = "https://github.com/LLNL/clippy/issues"
